welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: not found: value pos
       pos=i
       ^indexOfValue:9: error: not found: value pos
return pos
       ^