welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
       var L=nums.length
       var pos1=(-1)
  for (i<-0 to L) {
     if (nums(i)==lookingFor) {
       pos=i
     }
  }
return pos

}


  